--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+html,
+body {
+    padding: 0;
+    margin: 0;
+    font-family: IBMPlexSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    height: 100%;
+    color: var(--white-color);
+    background-image: linear-gradient(var(--secondary-blue), var(--third-blue), var(--third-blue), var(--secondary-blue));
+    background-size: cover;
+    background-attachment: fixed
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+    box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+:root {
+    --primary-blue: #068ACD;
+    --secondary-blue: #0071BB;
+    --third-blue: #22AAE2;
+    --text-black: #000000;
+    --white-color: white;
+    --orange-color: #E78C25;
+    --yellow-color: #FDC226;
+    --pink-color: #EC008D;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+    font-weight: 500;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+    margin: 0;
+}
+
+.page-container {
+    padding: 40px 11%;
+}
+
+.footer {
+    background-color: var(--primary-blue);
+    padding: 10px 20px;
+    text-align: center;
 }
