--- a/src/components/confirm-cart-item/confirm-cart-item.module.css
+++ b/src/components/confirm-cart-item/confirm-cart-item.module.css
@@ -44,7 +44,7 @@
 
 .removeButton {
     background-color: var(--third-blue);
-    color: var(--secondary-blue);
+    color: var(--white-color);
     margin-top: 5px;
     padding: 10px;
     border: none;
@@ -56,6 +56,6 @@
 }
 
 .removeButton:hover {
-    background-color: #ffffff;
+    background-color: var(--white-color);
     color: var(--primary-blue);
 }
