--- a/src/components/account-options-dropdown/account-options-dropdown.module.css
+++ b/src/components/account-options-dropdown/account-options-dropdown.module.css
@@ -1,13 +1,14 @@
 .container {
     position: absolute;
-    width: 240px;
+    width: 20%;
+    min-width: 240px;
     display: flex;
     flex-direction: column;
     padding: 20px;
     border: 1px solid black;
     background-color: var(--white-color);
-    top: 235px;
-    right: 105px;
+    top: 100px;
+    right: 0px;
     z-index: 5;
 }
 
@@ -23,7 +24,7 @@
 .navigationLink {
     color: var(--secondary-blue);
     font-size: 18px;
-    min-width: 100px;
+    min-width: 20%;
     display: flex;
     align-items: center;
     margin-bottom: 10px;
