--- a/src/components/cart-dropdown/cart-dropdown.module.css
+++ b/src/components/cart-dropdown/cart-dropdown.module.css
@@ -6,8 +6,8 @@
     padding: 20px;
     border: 1px solid black;
     background-color: var(--white-color);
-    top: 235px;
-    right: 275px;
+    top: 100px;
+    right: 23%;
     z-index: 5;
 }
 
@@ -17,7 +17,7 @@
 }
 
 .emptyMessage {
-    margin-bottom: 240px;
+    margin-bottom: 20px;
     color: black;
 }
 
