--- a/src/components/form-input/form-input.module.css
+++ b/src/components/form-input/form-input.module.css
@@ -9,11 +9,11 @@
     font-size: 16px;
     padding: 10px 10px 10px 5px;
     display: block;
-    width: 100%;
     border: none;
     border-radius: 0;
     border-bottom: 1px solid var(--secondary-blue);
     margin: 25px 0;
+    width: 400px;
 }
 
 .label {
