--- a/src/components/login-dropdown/login-dropdown.module.css
+++ b/src/components/login-dropdown/login-dropdown.module.css
@@ -1,13 +1,14 @@
 .container {
     position: absolute;
-    width: 240px;
+    width: 20%;
+    min-width: 240px;
     display: flex;
     flex-direction: column;
     padding: 20px;
     border: 1px solid black;
     background-color: var(--white-color);
-    top: 235px;
-    right: 105px;
+    top: 100px;
+    right: 0px;
     z-index: 5;
 }
 
