--- a/src/routes/address/address.module.css
+++ b/src/routes/address/address.module.css
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     padding: 20px 2rem;
     background-color: var(--white-color);
+    background-size: cover;
     color: var(--primary-blue);
 }
 
@@ -13,6 +14,20 @@
 }
 
 .buttonContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex: 1;
+}
+
+.inputContainer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex: 1;
+}
+
+.emailContainer {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
