--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
     font-family: IBMPlexSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     height: 100%;
     color: var(--white-color);
-    background-color: var(--white-color);
+    background-color: var(--text-black);
     background-size: cover;
     background-attachment: fixed;
 }
