--- a/src/components/card/ticket-card.module.css
+++ b/src/components/card/ticket-card.module.css
@@ -11,6 +11,19 @@
     margin: 20px 30px;
 }
 
+.locationContainer {
+    display: flex;
+    align-items: stretch;
+    justify-content: center;
+    background-color: var(--third-blue);
+    color: var(--white-color);
+    border-radius: 20px;
+    padding: 20px;
+    max-width: 400px;
+    min-width: 25%;
+    margin: 20px 30px;
+}
+
 .title {
     flex: 1;
     text-align: center;
