--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@ body {
     padding: 0;
     margin: 0;
     font-family: IBMPlexSans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    height: 100%;
+    min-height: 1oovh;
     color: var(--white-color);
-    background-color: var(--text-black);
+    background-color: var(--white-color);
     background-size: cover;
     background-attachment: fixed;
 }
@@ -50,11 +50,16 @@ pre {
     padding: 40px 11%;
 }
 
+.full-page-container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .footer {
     background-color: var(--primary-blue);
     padding: 10px 20px;
     text-align: center;
-    position: relative;
-    bottom: 0;
-    width:100%
+    margin-top: auto;
+    width:100%;
 }
