--- a/src/App.css
+++ b/src/App.css
@@ -56,10 +56,28 @@ pre {
     flex-direction: column;
 }
 
-.footer {
-    background-color: var(--primary-blue);
-    padding: 10px 20px;
-    text-align: center;
-    margin-top: auto;
-    width:100%;
+@media screen and (min-width: 400px) {
+    .footer {
+        background-color: var(--primary-blue);
+        padding: 10px 20px;
+        text-align: center;
+        margin-top: auto;
+        width:100%;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .footer {
+        background-color: var(--primary-blue);
+        padding: 10px 20px;
+        text-align: center;
+        margin-top: auto;
+        width: 100%;
+    }
+    .footer h3 {
+        font-size: 16px;
+        }
+    .footer p {
+        font-size: 12px;
+    }
 }
