--- a/src/components/slideshow/slideshow.module.css
+++ b/src/components/slideshow/slideshow.module.css
@@ -1,21 +1,57 @@
-.container {
-    display: flex;
-    background-color: var(--white-color);
-    color: var(--white-color);
-    justify-content: space-evenly;
-    align-items: center;
-    height: 420px;
+
+@media screen and (max-width: 4000px) {
+    .photo {
+        height: 400px;
+    }
+    .container {
+        display: flex;
+        background-color: var(--white-color);
+        color: var(--white-color);
+        justify-content: space-evenly;
+        align-items: center;
+        height: 420px;
+    }
 }
 
-.photo{
-    height: 400px;
+@media screen and (max-width: 1400px) {
+    .photo {
+            height: 200px;
+        }
+    .container {
+        display: flex;
+        background-color: var(--white-color);
+        color: var(--white-color);
+        justify-content: space-evenly;
+        align-items: center;
+        height: 220px;
+    }
 }
 
-.sidephoto {
-    flex: 1;
-    height: 100%;
-    display: flex;
-    align-items: top;
-    justify-content: center;
-    color: var(--orange-color);
+@media screen and (max-width: 800px) {
+    .container {
+            display: block;
+            background-color: var(--white-color);
+            color: var(--white-color);
+        }
+    .photo 
+        {   
+            display: block;
+            width: 300px;
+            margin: 0 auto 0 auto;
+        }
+        .sidephoto {
+            display: none;
+        }
+    
+}
+
+@media screen and (min-width: 800px) {
+    .sidephoto {
+            flex: 1;
+            height: 100%;
+            display: flex;
+            align-items: top;
+            justify-content: center;
+            color: var(--orange-color);
+        }
 }
