--- a/src/components/navigation-bar/navigation-bar.module.css
+++ b/src/components/navigation-bar/navigation-bar.module.css
@@ -38,7 +38,7 @@
     background-color: var(--primary-blue);
     height: 50px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 }
 
