--- a/src/components/slideshow/slideshow.module.css
+++ b/src/components/slideshow/slideshow.module.css
@@ -1,8 +1,4 @@
-
 @media screen and (max-width: 4000px) {
-    .photo {
-        height: 400px;
-    }
     .container {
         display: flex;
         background-color: var(--white-color);
@@ -10,13 +6,20 @@
         justify-content: space-evenly;
         align-items: center;
         height: 420px;
+        max-width: 100%;
+    }
+    .photo {
+        height: 400px;
+    }
+    .sidePhoto {
+        max-width: 100%;
     }
 }
 
 @media screen and (max-width: 1400px) {
     .photo {
-            height: 200px;
-        }
+        height: 200px;
+    }
     .container {
         display: flex;
         background-color: var(--white-color);
@@ -29,29 +32,27 @@
 
 @media screen and (max-width: 800px) {
     .container {
-            display: block;
-            background-color: var(--white-color);
-            color: var(--white-color);
-        }
-    .photo 
-        {   
-            display: block;
-            width: 300px;
-            margin: 0 auto 0 auto;
-        }
-        .sidephoto {
-            display: none;
-        }
-    
+        display: block;
+        background-color: var(--white-color);
+        color: var(--white-color);
+    }
+    .photo {
+        display: block;
+        width: 300px;
+        margin: 0 auto 0 auto;
+    }
+    .sidephoto {
+        display: none;
+    }
 }
 
 @media screen and (min-width: 800px) {
     .sidephoto {
-            flex: 1;
-            height: 100%;
-            display: flex;
-            align-items: top;
-            justify-content: center;
-            color: var(--orange-color);
-        }
+        flex: 1;
+        height: 100%;
+        display: flex;
+        align-items: top;
+        justify-content: center;
+        color: var(--orange-color);
+    }
 }
