--- a/src/components/confirm-cart-item/confirm-cart-item.module.css
+++ b/src/components/confirm-cart-item/confirm-cart-item.module.css
@@ -1,61 +1,121 @@
-.container {
-    display: flex;
-    flex-direction: row;
-    background-color: var(--primary-blue);
-    color: #ffffff;
-    border-radius: 5px;
-    cursor: pointer;
-    text-align: center;
-    width: 100%;
-    margin-bottom: 30px;
+@media screen and (min-width: 800px) {
+    .container {
+        display: flex;
+        flex-direction: row;
+        background-color: var(--primary-blue);
+        color: #ffffff;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+        width: 100%;
+        margin-bottom: 30px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .item {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+    }
+    .quantity {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .quantityIcons {
+        margin: 0 10px;
+        font-size: 25px;
+    }
+    .price {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .total {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .removeButton {
+        background-color: var(--third-blue);
+        color: var(--white-color);
+        margin-top: 5px;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+        width: 150px;
+        font-weight: bold;
+    }
+    .removeButton:hover {
+        background-color: var(--white-color);
+        color: var(--primary-blue);
+    }
+    .ticketImage {
+        width: 100px;
+    }
 }
 
-.item {
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-}
-
-.quantity {
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.quantityIcons {
-    margin: 0 10px;
-    font-size: 25px;
-}
-
-.price {
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.total {
-    width: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
-
-.removeButton {
-    background-color: var(--third-blue);
-    color: var(--white-color);
-    margin-top: 5px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    text-align: center;
-    width: 150px;
-    font-weight: bold;
-}
-
-.removeButton:hover {
-    background-color: var(--white-color);
-    color: var(--primary-blue);
+@media screen and (max-width: 800px) {
+    .container {
+        display: flex;
+        flex-direction: row;
+        background-color: var(--primary-blue);
+        color: #ffffff;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+    .item {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+    }
+    .quantity {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .quantityIcons {
+        margin: 0 10px;
+        font-size: 25px;
+    }
+    .price {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .total {
+        width: 25%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
+    .removeButton {
+        background-color: var(--third-blue);
+        color: var(--white-color);
+        margin-top: 5px;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
+        width: 150px;
+        font-weight: bold;
+    }
+    .removeButton:hover {
+        background-color: var(--white-color);
+        color: var(--primary-blue);
+    }
+    .ticketImage {
+        width: 50px;
+    }
 }
